@@ -56,7 +56,7 @@
       description="A friendly issue tracker"
       provides="Products.GenericSetup.interfaces.EXTENSION"
       />
-  
+
   <!-- Avoid deprecation warnings for manage_afterAdd and friends. -->
   <five:deprecatedManageAddDelete
       class=".content.PoiTracker.PoiTracker" />
@@ -102,12 +102,21 @@
       sortkey="4"
       profile="Products.Poi:default" />
 
-<gs:upgradeStep
+  <gs:upgradeStep
       title="Run workflow import step"
       description="Apply our own workflow.xml file."
       source="1202"
       destination="1203"
       handler="Products.Poi.migration.run_workflow_step"
+      profile="Products.Poi:default" />
+
+  <gs:upgradeStep
+      title="Give all tracker managers the local Manager role"
+      description="Make sure all the tracker manager actually have the
+                   Manager role."
+      source="1203"
+      destination="1204"
+      handler="Products.Poi.migration.update_tracker_managers"
       profile="Products.Poi:default" />
 
 </configure>
